--- a/wsgiadmin/templates/redirects.html
+++ b/wsgiadmin/templates/redirects.html
@@ -57,7 +57,7 @@
             <tbody>
             <tr>
                 <td colspan="3">{% trans "No email alias exists yet." %}
-                    <a href="{% url wsgiadmin.emails.views.addRedirect %}">
+                    <a href="{% url add_redirect %}">
                         {% trans "Create new email redirect" %}
                     </a>.
                 </td>
