--- a/wsgiadmin/templates/simplepasswd.html
+++ b/wsgiadmin/templates/simplepasswd.html
@@ -1,5 +1,5 @@
 {% extends "admin.html" %}
-{% load uni_form_tags %}
+{% load crispy_forms_tags %}
 {% load i18n %}
 
 {% block content %}
@@ -10,12 +10,8 @@
             <div class="clear"></div>
         </div>
 
-        <form action="{% url db_passwd dbtype=dbtype dbname=dbname %}" method="post" class="uniForm">
-            {% csrf_token %}
-            {{ form|as_uni_form }}
-            <p>
-                <input type="submit" id="submit_button" class="input-submit" value="{{ submit }}"/>
-            </p>
-        </form>
+        {% csrf_token %}
+        {% crispy form form_helper %}
+
     </div>
 {% endblock %}
