--- a/wsgiadmin/templates/regok.html
+++ b/wsgiadmin/templates/regok.html
@@ -1,20 +1,15 @@
+{% extends "base.html" %}
 {% load i18n %}
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Přihlášení a registrace</title>
-	<link rel="stylesheet/less" type="text/css" href="{{ STATIC_URL }}cssng/style.less">
-	<script src="{{ STATIC_URL }}js/less-1.1.3.min.js" type="text/javascript"></script>
-</head>
-<body>
 
-<div id="container">
-	<div id="top">
-		<h1>{% trans "Registrace proběhla v pořádku." %}</h1>
+{% block bodyclass %}registrace{% endblock %}
+{% block body %}
 
-		<p>Vyčkejte prosím na schválení účtu, o kterém budete spraveni emailem.</p>
-	</div>
-</div>
+    <div id="container">
+        <div id="top">
+            <h1>{% trans "Registrace proběhla v pořádku." %}</h1>
 
-</body>
-</html>
+            <p>Vyčkejte prosím na schválení účtu, o kterém budete spraveni emailem.</p>
+        </div>
+    </div>
+
+{% endblock %}
