--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -105,12 +105,26 @@
             <ul id="sidebar-menu">
                 <li>
                     <ul>
-                        <li><a href="{% url app_static app_type='static' %}">{% trans "Add static page" %}</a></li>
-                        <li><a href="{% url app_static app_type='php' %}">{% trans "Add PHP app" %}</a></li>
-                        <li><a href="{% url app_wsgi %}">{% trans "Add WSGI app" %}</a></li>
-                        <li><a href="{% url app_list %}">{% trans "Your apps" %}</a></li>
-                        <li><a href="{% url create_cron %}">{% trans "Add cron record" %}</a></li>
-                        <li><a href="{% url cron_list %}">{% trans "Crontab" %}</a></li>
+                        <li>
+                            <a class="btn" href="{% url app_static app_type='static' %}">
+                                <span class="icon-plus"></span>
+                                {% trans "Add static page" %}
+                            </a></li>
+                        <li><a class="btn" href="{% url app_static app_type='php' %}">
+                            <span class="icon-plus"></span>
+                            {% trans "Add PHP app" %}</a></li>
+                        <li><a class="btn" href="{% url app_wsgi %}">
+                            <span class="icon-plus"></span>
+                            {% trans "Add WSGI app" %}</a></li>
+                        <li><a class="btn" href="{% url app_list %}">
+                            <span class="icon-list"></span>
+                            {% trans "Your apps" %}</a></li>
+                        <li><a class="btn" href="{% url create_cron %}">
+                            <span class="icon-plus"></span>
+                            {% trans "Add cron record" %}</a></li>
+                        <li><a class="btn" href="{% url cron_list %}">
+                            <span class="icon-list"></span>
+                            {% trans "Crontab" %}</a></li>
                     </ul>
                 </li>
             </ul>
